# vectors-cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
src/: main.cpp  vector2.hpp  vector3.hpp  vector4.hpp
tests/: test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
